# Strategy_Trading

./: CMakeLists.txt  README.md  const_values.h  ideas.h  main.cpp  tickers.ini
app_controller/: CMakeLists.txt  app_controller.cpp  app_controller.h
curl_client/: curl_data_structures.cpp  request.cpp  request.h
data_feed/: CMakeLists.txt
data_feed/coinbase/: coinbase.cpp  coinbase.h
data_feed/quipuswap/: quipuswap.cpp  quipuswap.h
data_feed/tezos/: tezos_data_structures.h
data_feed/tzkt/: tzkt_io.h
dexes/quipuswap/: quipuswap.cpp  quipuswap.h  quipuswap_data_structures.h
dexes/tezos/: tezos_data_structures.h
dexes/transaction/: dex_transaction.cpp  dex_transaction.h
dexes/tzkt/: tzkt_io.cpp
ini/: bot_config.cpp  bot_config.h  ini.h
json/: CMakeLists.txt  json_handler.cpp  json_handler.h
network/: CMakeLists.txt  coinbase.cpp  coinbase.h
network/curl_client/: curl_handler.cpp  curl_handler.h  data_structures.cpp  request.cpp  request.h  utils.h
pipe/: os_pipe.cpp  os_pipe.h
primitives/: CMakeLists.txt  exceptions.h  maps.cpp  maps.h  operators.h  relations.h  strings.h  timestamp.cpp  timestamp.h  types_declarations.h  user_defined_exceptions.h  user_defined_strings.h  value.cpp  value.h
project_files/: const_values.h
project_files/app_controller/: CMakeLists.txt  controller.cpp  controller.h
project_files/backlog of ideas and thoughts/: main_file_options.cpp  tryouts.cpp
project_files/curl_client/: CMakeLists.txt  connection_data.cpp  curl_client.h  curl_const_values.h  curl_data_structures.h  curl_handler.cpp  curl_handler.h  utils.cpp  utils.h
project_files/dexes/: CMakeLists.txt  data_processor.h
project_files/dexes/coinbase/: coinbase.cpp  coinbase.h  coinbase_data_structures.h
project_files/dexes/quipuswap/: quipuswap.cpp  quipuswap.h
project_files/dexes/transaction/: dex_transaction.cpp  dex_transaction.h
project_files/dexes/tzkt/: tzkt_io.cpp  tzkt_io.h
project_files/json/: CMakeLists.txt  json.cpp  json.h  json_builder.cpp  json_builder.h
project_files/pipe/: CMakeLists.txt
project_files/primitives/: CMakeLists.txt  maps.h  object_type.h  timestamp.cpp  timestamp.h  user_defined_exceptions.h  user_defined_strings.h
project_files/robot_config/: CMakeLists.txt  bot_config.cpp  bot_config.h
project_files/strategy/: CMakeLists.txt  base_objects_container.h  client.h  indicator.cpp  indicator.h  modifiers.h  portfolio.h  position.h  quote.h  randomer.h  rule.cpp  rule.h  signals.cpp  signals.h  strategy.cpp  strategy.h  strategy_engine.cpp  strategy_engine.h  threads_engine.h  trading_contract.cpp  trading_contract.h
project_files/strategy/market_data/: bid_ask.h  ohlcv.h  single_quote.h
project_files/ui/: CMakeLists.txt  ui.cpp  ui.h  ui.tcc  ui_dashboard.h  ui_events.h  ui_init_data.h  ui_main_menu.h
robot_config/: bot_config.cpp
setup_transacton_ts_script/: cli_args.ts  from_tez_to_token.ts  from_token_to_tez.ts  package.json  quipuswap_transaction.ts  test_cli_args.ts  test_transaction.ts  tsconfig.json
setup_user_data/: bot_config.ini
strategy/: CMakeLists.txt  account.cpp  account.h  base_objects_container.h  client.cpp  data_processor.cpp  data_processor.h  indicator.cpp  indicator.h  modifiers.h  portfolio.cpp  portfolio.h  position.cpp  position.h  quote.cpp  quote.h  rule.cpp  rule.h  signal.cpp  signal.h  signals.cpp  signals.h  strategy.cpp  strategy.h  strategy_engine.cpp  strategy_engine.h  threads_engine.h  trade.cpp  trade.h  trading_contract.cpp  trading_contract.h
tests/: CMakeLists.txt  tests_all.cpp  tests_api_coinbase.cpp  tests_api_tzkt.cpp  tests_coinbase_api.cpp  tests_data_processor.cpp  tests_indicator.cpp  tests_indicator_modifier.cpp  tests_portfolio.cpp  tests_rule.cpp  tests_safe_ptr.cpp  tests_signal.cpp  tests_strategy_run.cpp  tests_timestamp.cpp  tests_trade.cpp  tests_trading_contract.cpp  tests_value.cpp  tests_value_container.cpp
tg_bot_ui/: CMakeLists.txt  tg_bot_ui.cpp  tg_bot_ui.h
transaction/: CMakeLists.txt  dex_transaction.cpp  dex_transaction.h
ui/: CMakeLists.txt  ui.cpp  ui.h  ui_events.cpp  ui_events.h  ui_init_data.h
